# ChangeLog for media-tv/xbmc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $

  29 Jun 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  xbmc-12.3-r1.ebuild, xbmc-13.0_p2-r1.ebuild:
  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
  "sound".

*xbmc-13.0_p2-r1 (12 May 2014)

  12 May 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +xbmc-13.0_p2-r1.ebuild, -files/xbmc-9.11-jpeg7-performance.diff,
  -files/xbmc-9.11-smartplaylist-deletelastrule.diff,
  -files/xbmc-9.11-wavpack.patch, files/xbmc-9999-nomythtv.patch,
  -files/playercontrol_partymode_fix.diff,
  -files/xbmc-fix-mysql-memoryleak.diff, metadata.xml:
  media-tv/xbmc: Version bump. Based on upstream xbmc-13.0_p2.ebuild, with
  Samba4 compat. Clean up old patches.

*xbmc-12.2-r2 (11 Jul 2013)

  11 Jul 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -xbmc-12.2.ebuild, +xbmc-12.2-r2.ebuild, metadata.xml:
  Try at Samba4 compat.

*xbmc-12.2 (11 May 2013)

  11 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/xbmc-12.0-system-projectm.patch, +xbmc-12.2.ebuild, metadata.xml:
  Add ebuild for 12.2, based on xbmc-12.1-r1.ebuild.

  31 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Fix use_enable usb.

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Use the Frodo branch for now.

  20 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Move "inherit git-2" to the same place as the upstream ebuild.

  30 Dec 2012; Stijn Tintel <stijn+gentoo@linux-ipv6.be>
  files/xbmc-9999-no-arm-flags.patch, files/xbmc-9999-nomythtv.patch:
  Updated live ebuild patches from upstream.

  30 Dec 2012; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Merge upstream ebuild changes.
